# TLS

./: .gitignore  ENHANCED_SYSTEM_SUMMARY.md  README.md  README_REFACTORED.md  TFLITE_INTEGRATION.md  build.bat  build_nuitka.py  camera.py  db.py  detector.py  discovery.py  esp32_cam_helper.py  example_tflite_detection.py  feature_extraction.py  launch_web.bat  launch_web_ui.bat  launch_window.bat  launcher.py  lock_control_server.py  main.py  manage_users.py  manage_users_gui.py  model_wrapper.py  network_config.py  nuitka-crash-report.xml  preprocessing.py  registration.py  requirements.txt  schema.sql  server.py  start_network_server.bat  tls_stream_handler.py  verification.py  web_server.py
model/: CMakeLists.txt  build.bat  build.sh  model_wrapper.cpp  model_wrapper.h
model/model-parameters/: model_metadata.h  model_variables.h
model/tflite-model/: tflite_learn_781277_3.h  tflite_learn_781277_3.tflite
utils/: config.py  palm.py
